# Yadro-TATLIN

./: CMakeLists.txt  README.md  main.cpp
include/: AbstractTape.hpp  FileTape.hpp  TapeSorter.hpp  Utility.hpp  VectorTape.hpp
resources/: input.txt  output.txt  randomDelimiter.txt
resources/tmp/: input_copy.txt  left.txt  output_copy.txt  right.txt
src/: Tape.cpp
